# kestrel-interface

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  sdkconfig
components/core/: CMakeLists.txt  kest_alloc.c  kest_alloc.h  kest_block.c  kest_block.h  kest_bump_arena.c  kest_bump_arena.h  kest_context.c  kest_context.h  kest_dependent.c  kest_dependent.h  kest_dict.h  kest_driver.c  kest_driver.h  kest_eff_desc.c  kest_eff_desc.h  kest_effect.c  kest_effect.h  kest_effect_enum.c  kest_effect_enum.h  kest_effect_init.c  kest_effect_init.h  kest_effect_table.c  kest_effect_table.h  kest_error_codes.c  kest_error_codes.h  kest_event.c  kest_event.h  kest_expr_scope.c  kest_expr_scope.h  kest_expression.c  kest_expression.h  kest_file_task.c  kest_file_task.h  kest_files.c  kest_files.h  kest_global.c  kest_global.h  kest_helper_fn.c  kest_helper_fn.h  (+92 more)
components/drivers/: CMakeLists.txt  kest_footswitch.c  kest_footswitch.h  kest_i2c.h  kest_sd.c  kest_sd.h  kest_sgtl5000.c  kest_sgtl5000.h  kest_touch_irq.c  m_footswitch.c  m_sd.c  m_sd.h  m_sgtl5000.c  waveshare_dsi_touch_5_a.c  waveshare_dsi_touch_5_a.h
components/fpga/: CMakeLists.txt  kest_fixed_point.c  kest_fixed_point.h  kest_fpga_cmd.c  kest_fpga_cmd.h  kest_fpga_comms.c  kest_fpga_comms.h  kest_fpga_defs.h  kest_fpga_dma.c  kest_fpga_dma.h  kest_fpga_encoding.c  kest_fpga_encoding.h  kest_fpga_instr.c  kest_fpga_instr.h  kest_fpga_io.c  kest_fpga_io.h  kest_fpga_position.c  kest_fpga_position.h  kest_fpga_update.c  kest_fpga_update.h  kest_reg_format.c  kest_reg_format.h  m_fixed_point.c  m_fixed_point.h  m_fpga_comms.c  m_fpga_comms.h  m_fpga_encoding.c  m_fpga_encoding.h  m_fpga_io.c  m_fpga_io.h  m_reg_format.c
components/parser/: CMakeLists.txt  kest_asm_parser.c  kest_asm_parser.h  kest_dict_extract.c  kest_dict_extract.h  kest_dictionary.c  kest_dictionary.h  kest_eff_parser.c  kest_eff_parser.h  kest_eff_section.c  kest_eff_section.h  kest_expr_parser.c  kest_expr_parser.h  kest_tokenizer.c  kest_tokenizer.h  m_asm_parser.c  m_asm_parser.h  m_dict_extract.c  m_dictionary.c  m_dictionary.h  m_eff_parser.c  m_eff_parser.h  m_eff_section.c  m_eff_section.h  m_expr_parser.c  m_expr_parser.h  m_tokenizer.c  m_tokenizer.h
components/ui/: CMakeLists.txt  kest_button.c  kest_button.h  kest_effect_select.c  kest_effect_select.h  kest_effect_settings.c  kest_effect_settings.h  kest_effect_view.c  kest_effect_view.h  kest_menu.c  kest_menu.h  kest_page_id.c  kest_page_id.h  kest_parameter_view.h  kest_parameter_widget.c  kest_parameter_widget.h  kest_preset_settings.c  kest_preset_settings.h  kest_preset_view.c  kest_preset_view.h  kest_profile_settings.c  kest_profile_settings.h  kest_profile_view.c  kest_profile_view.h  kest_sequence_list.c  kest_sequence_list.h  kest_sequence_view.c  kest_sequence_view.h  kest_ui.c  kest_ui.h  m_button.c  m_effect_select.c  m_effect_select.h  m_effect_settings.c  m_effect_settings.h  m_effect_view.c  m_effect_view.h  m_menu.c  m_page_id.c  m_page_id.h  (+14 more)
desktop/: FreeRTOSConfig.h  kest_desktop.c  kest_desktop.h  lv_conf.h  m_desktop.c  m_desktop.h
docs/html/: FreeRTOSConfig_8h.html  FreeRTOSConfig_8h__dep__incl.map  FreeRTOSConfig_8h__dep__incl.md5  FreeRTOSConfig_8h_source.html  README_8md.html  annotated.html  annotated_dup.js  classes.html  dir_000001_000005.html  dir_000002_000000.html  (+7304 more)
main/: CMakeLists.txt  kest_int.c  kest_int.h  kest_lib.h  kest_lib_cmph.h  m_int.c  m_int.h  m_lib.h  m_lib_cmph.h
tests/: kest_test.c  kest_test.h  m_test.c  m_test.h
(+120 files in other folders)
