idf_component_register(SRCS "m_alloc.c"
							"m_bump_arena.c"
							"m_block.c"
							"m_context.c"
							"m_eff_desc.c"
							"m_error_codes.c"
							"m_files.c"
							"m_hfunc.c"
							"m_lv_log.c"
							"m_printf.c"
							"m_resource.c"
							"m_parameter.c"
							"m_expression.c"
							"m_expr_scope.c"
							"m_param_update.c"
							"m_pipeline.c"
							"m_profile.c"
							"m_representation.c"
							"m_sequence.c"
							"m_state.c"
							"m_effect.c"
							"m_effect_enum.c"
							"m_effect_init.c"
							"m_effect_table.c"
					REQUIRES
							driver
							drivers
							ui
							fpga
							esp_timer
					INCLUDE_DIRS "." "../../main" "../" "../ui" "../drivers" "../parser")
