idf_component_register(SRCS "kest_alloc.c"
							"kest_bump_arena.c"
							"kest_block.c"
							"kest_context.c"
							"kest_eff_desc.c"
							"kest_error_codes.c"
							"kest_files.c"
							"kest_helper_fn.c"
							"kest_lv_log.c"
							"kest_printf.c"
							"kest_string.c"
							"kest_resource.c"
							"kest_parameter.c"
							"kest_expression.c"
							"kest_expr_scope.c"
							"kest_param_update.c"
							"kest_pipeline.c"
							"kest_preset.c"
							"kest_representation.c"
							"kest_sequence.c"
							"kest_state.c"
							"kest_effect.c"
							"kest_effect_enum.c"
							"kest_effect_init.c"
							"kest_effect_table.c"
					REQUIRES
							driver
							drivers
							ui
							fpga
							esp_timer
					INCLUDE_DIRS "." "../../main" "../" "../ui" "../drivers" "../parser")
